syntax = "proto3";

package bookstore;

option go_package = "./proto";

service WebService {
  rpc GetBook(GetBookRequest) returns (Book) {}
}

service PurchaseService {
  rpc PurchaseBook(PurchaseBookRequest) returns (PurchaseBookResponse) {}
}

service SearchService {
  rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse) {}
}

service BrowseService {
  rpc BrowseBooks(BrowseBooksRequest) returns (BrowseBooksResponse) {}
}

message GetBookRequest {
  string id = 1;
}

message PurchaseBookRequest {
  string book_id = 1;
  int32 quantity = 2;
}

message PurchaseBookResponse {
  bool success = 1;
  string order_id = 2;
}

message SearchBooksRequest {
  string query = 1;
}

message SearchBooksResponse {
  repeated Book books = 1;
}

message BrowseBooksRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message BrowseBooksResponse {
  repeated Book books = 1;
  int32 total_books = 2;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  float price = 4;
  string description = 5;
}
